Check in progress on UCSD Ext assignment.  Checking in changes to existing sandbox tests.